added download all labels at once
